Teste de funções

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div id="keyboard">
                 <p>
-                    <button id="clear" onclick="clear()" class="button">C</button>
+                    <button id="clear" onclick="clearLine()" class="button">C</button>
                     <button id="porcento" class="button" onclick="porcento()">%</button>
                     <button id="soma" class="button" onclick="soma()">+</button>
                     <button id="vezes" class="button" onclick="vezes()">X</button>
@@ -55,7 +55,7 @@
                 </p>
                 <br>
                 <p>
-                    <button id="zero" class="button" onclick="zero()">00</button>
+                    <button id="zero" class="button" onclick="zero()">0</button>
                     <button id="delta" class="button" onclick="delta()">Δ</button>
                     <button id="igual" class="button" onclick="igual()">=</button>
                 </p>
@@ -64,5 +64,6 @@
         
     </main>
     <script src="public/script/main.js"></script>
+    <script src="public/script/op.js"></script>
 </body>
 </html>
