Adição de operações (teste)

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 </p>
                 <br>
                 <p>
-                    <button id="um" class="button" onClick="um()">1</button>
+                    <button id="um" class="button" onclick="um()">1</button>
                     <button id="dois" class="button" onclick="dois()">2</button>
                     <button id="tres" class="button" onclick="tres()">3</button>
-                    <button id="elevado" class="button" onclick="elevado()">^</button>
+                    <button id="elevado" class="button" onclick="parenteses()">()</button>
                 </p>
                 <br>
                 <p>
