Adição de operações

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <br>
                 <p>
                     <button id="zero" class="button" onclick="zero()">0</button>
-                    <button id="delta" class="button" onclick="delta()">Δ</button>
+                    <button id="delta" class="button" onclick="raiz()">√</button>
                     <button id="igual" class="button" onclick="igual()">=</button>
                 </p>
             </div>
