Atualização das funções e adição de novas funcionalidades

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="keyboard">
                 <p>
                     <button id="clear" onclick="clearLine()" class="button">C</button>
-                    <button id="porcento" class="button" onclick="porcento()">%</button>
+                    <button id="del" onclick="del()" class="button">⌫</button>
                     <button id="soma" class="button" onclick="soma()">+</button>
                     <button id="vezes" class="button" onclick="vezes()">X</button>
                 </p>
@@ -56,7 +56,12 @@
                 <br>
                 <p>
                     <button id="zero" class="button" onclick="zero()">0</button>
+                    <button id="dot" class="button" onclick="dot()">.</button>
                     <button id="delta" class="button" onclick="raiz()">√</button>
+                    <button id="porcento" class="button" onclick="porcento()">%</button>
+                </p>
+                <br>
+                <p>
                     <button id="igual" class="button" onclick="igual()">=</button>
                 </p>
             </div>
