--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <button id="um" class="button" onclick="um()">1</button>
                     <button id="dois" class="button" onclick="dois()">2</button>
                     <button id="tres" class="button" onclick="tres()">3</button>
-                    <button id="elevado" class="button" onclick="parenteses()">()</button>
+                    <button id="parenteses" class="button" onclick="parenteses()">()</button>
                 </p>
                 <br>
                 <p>
